bk_ida/gccida/c3/find_split_point
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3376:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3390:4: error: expected ';' after expression
rtx v25; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3390:5: error: use of undeclared identifier 'v25'
rtx v25; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3395:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3395:5: error: use of undeclared identifier 'v30'; did you mean 'v10'?
rtx v30; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3375:5: note: 'v10' declared here
int v10; // ecx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3398:6: error: use of undeclared identifier 'v33'
rtx *v33; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3399:4: error: expected ';' after expression
rtx v34; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3399:5: error: use of undeclared identifier 'v34'
rtx v34; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3404:6: error: use of undeclared identifier 'single_use'; did you mean 'single_set_2'?
rtx *single_use; // rax 
     ^~~~~~~~~~
     single_set_2
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/rtl.h:1470:12: note: 'single_set_2' declared here
extern rtx single_set_2                 PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3404:5: error: invalid operands to binary expression ('struct rtx_def *' and 'rtx (rtx, rtx)' (aka 'struct rtx_def *(struct rtx_def *, struct rtx_def *)'))
rtx *single_use; // rax 
~~~ ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3405:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3405:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3410:4: error: expected ';' after expression
rtx v45; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3410:5: error: use of undeclared identifier 'v45'
rtx v45; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3411:4: error: expected ';' after expression
rtx v46; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3411:5: error: use of undeclared identifier 'v46'
rtx v46; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3423:6: error: use of undeclared identifier 'result'
rtx *result; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3431:4: error: expected ';' after expression
rtx v66; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/combine.c:3431:5: error: use of undeclared identifier 'v66'
rtx v66; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_split_point/src/obj/combine.o] Error 1
